fix preferences saving and read browser default dark mode

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -3,10 +3,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #fff;
 }
 
 #root {
   height: 100vh;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #000;
+    color: #fff;
+  }
 }
 
 @font-face {
